[package]
name = "solana-tx-parser"
version = "0.1.1"
edition = "2021"
author = "hodlwarden"
description = "Solana DEX transaction parser - parse trades, liquidity, and meme events"
license = "MIT"
repository = "https://github.com/hodlwarden/solana-tx-parser"
keywords = ["solana", "dex", "parser", "swap", "jupiter"]
categories = ["cryptography", "encoding"]
readme = "README.md"
documentation = "https://docs.rs/solana-tx-parser"
homepage = "https://github.com/hodlwarden/solana-tx-parser"

[dependencies]
borsh = "1.5"
bs58 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "2.3"
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"
